syntax = "proto3";

package inference;

service InferenceService {
  rpc Predict (PredictRequest) returns (PredictResponse) {}
  rpc BatchPredict (BatchPredictRequest) returns (BatchPredictResponse) {}
  rpc TestPredict (TestPredictRequest) returns (TestPredictResponse) {}
}

message ImageData {
  string camera_ip = 1;
  bytes image_data = 2;
}

message PredictRequest {
  ImageData image = 1;
}

message PredictResponse {
  string camera_ip = 1;
  repeated Detection detections = 2;
}

message BatchPredictRequest {
  repeated ImageData images = 1;
}

message BatchPredictResponse {
  repeated PredictResponse results = 1;
}

message TestPredictRequest {
  ImageData image = 1;
}

message TestPredictResponse {
  string camera_ip = 1;
  repeated Detection detections = 2;
  string orig_shape = 3;
  string boxes = 4;
  string probs = 5;
  string keypoints = 6;
  string obb = 7;
  string speed = 8;
  string names = 9;
  string json_output = 10;
  bytes plot_image = 11;
  string verbose_output = 12;
}

message Detection {
  string label = 1;
  float confidence = 2;
  repeated float bbox = 3;
}